# ProyectoFinal-PDC

./: .python-version  EDA_realsuk.Rmd  EDA_realsuk.html  EDA_realsuk.md  README.md  download.sh  pyproject.toml
config/: config.md  settings.toml
docs/: docs.md
realsuk/: pyproject.toml  realsuk.py
realsuk/config/: settings.toml
realsuk/sql/: Análisis_Bash  create_schemas.sql  to_cleaned.sql  to_semantic.sql
references/: references.md
sh/: creacion_usuario.sh  descarga_archivo.sh  pipeline.sh  proceso.sh  sh.md
sql/: create_raw_tables.sql  create_schemas.sql
tests/: tests.md
