[tool.poetry]
name = "Proyecto_Final"
version = "1.0.0"
description = ""
license = "GPL3.0+"
authors = ["Victor Guardado, Mario Alberto Cruz, Mario Rodriguez"]
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
dynaconf = "^2.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
